--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
-google-generativeai
+google-generativeai>=0.5.0
 streamlit-mic-recorder
 pandas
 huggingface-hub
 firebase-admin
+ase-admin
